# rt-weekend

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
native-rt/: Cargo.toml
native-rt/src/: main.rs
native-rt/src/image_writer/: mod.rs
rt/: Cargo.toml
rt/src/: camera.rs  lib.rs
rt/src/geometry/: aabb.rs
rt/src/material/: material.rs
rt/src/math/: mod.rs  vec3.rs
scenes/: cuastics_demo.rhai  dielectric_demo.lua  dielectric_demo.rhai  diffuse_demo.lua  diffuse_demo.rhai  emissive_demo.rhai  image_ch_1.lua  image_ch_1.rhai  metal_demo.lua  metal_demo.rhai  quick.lua  quick.rhai  scene.rhai
src/: camera.rs  lib.rs  main.rs
src/geometry/: aabb.rs  bvh.rs  hittable.rs  mod.rs  sphere.rs
src/material/: material.rs  mod.rs
src/math/: ray.rs  vec3.rs
wasm-rt/: Cargo.toml  index.html  index.mjs  package-lock.json  package.json  worker.mjs
wasm-rt/src/: lib.rs
