[package]
name = "rt-weekend"
version = "0.1.0"
authors = ["fanciful-marmot <daniel.crookston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
minifb = "0.16.0"
png = "0.16.3"
rand = "0.5.5"
mlua = { version = "0.9.7", features = ["lua54", "vendored"] }
