[package]
name = "rt-weekend"
version = "0.1.0"
authors = ["fanciful-marmot <daniel.crookston@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
minifb = "0.27.0"
png = "0.17.16"
rand = "0.8.5"
mlua = { version = "0.9.7", features = ["lua54", "vendored"] }
