[package]
name = "rt-weekend"
version = "0.1.0"
authors = ["fanciful-marmot <daniel.crookston@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
minifb = "0.27.0"
png = "0.17.16"
rand = "0.8.5"
rhai = { version = "1.20.1", features = ["f32_float"] }
rhai-rand = { version = "0.1.6", default-features = false, features = ["float"] }
