[package]
name = "wasm-rt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rhai = { version = "1.20.1", features = ["f32_float"] }
rhai-rand = { version = "0.1.6", default-features = false, features = ["float"] }
rt = { path = "../rt", features = ["wasm-bindgen"] }
web-sys = { version = "0.3.77", features = ["CanvasRenderingContext2d", "console", "ImageData"] }
